sign up form styled. Home page setup as landing and redirects to posts when signed in. Style revisions required to correct some alignements.

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -63,7 +63,7 @@ li.nav-item {
 }
 
 li.landing-page {
- margin-left: 15px; 
+ margin-left: 10px; 
 }
 
 .grid {
