--- a/app/assets/stylesheets/forms.scss
+++ b/app/assets/stylesheets/forms.scss
@@ -1,3 +1,12 @@
 .form_design {
   margin: auto;
 }
+
+.container.form-style {
+  margin-left: 25%; 
+  max-width: 49%;
+}
+
+div.col.s12.m12.login-btn {
+  margin-left: 52px;
+}
