--- a/app/assets/stylesheets/theme.scss
+++ b/app/assets/stylesheets/theme.scss
@@ -7,7 +7,7 @@ body {
     display: block;
     width: 100%;
     text-align: center;
-    background: url('http://placehold.it/1900x500') no-repeat center center scroll;
+    background: url('rf.jpeg') no-repeat center center scroll;
     -webkit-background-size: cover;
     -moz-background-size: cover;
     background-size: cover;
@@ -19,15 +19,19 @@ body {
 }
 
 .headline h1 {
-    font-size: 130px;
-    background: #fff;
-    background: rgba(255,255,255,0.9);
+    font-size: 75px;
+    color: white !important;
+    font-weight: bold;
+/*    background: #fff;
+    background: rgba(255,255,255,0.9);*/
 }
 
 .headline h2 {
-    font-size: 77px;
-    background: #fff;
-    background: rgba(255,255,255,0.9);
+    font-size: 55px;
+    color: white !important;
+    font-weight: bold;
+/*    background: #fff;
+    background: rgba(255,255,255,0.9);*/
 }
 
 .featurette-divider {
